# parallel-programming-labs

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/lab1/: CMakeLists.txt  task1.cpp  task2.cpp  task3_4.cpp  task5.cpp
src/lab1/matrix/include/: matrix.h
src/lab1/matrix/src/: matrix.cpp
src/lab2/: CMakeLists.txt  main.cpp
src/lab3/: CMakeLists.txt  main.cpp
src/lab3/cpuinfo/: CMakeLists.txt
src/lab3/cpuinfo/include/: cpuinfo.h
src/lab3/cpuinfo/src/: cpuinfo.cpp
src/lab4/: CMakeLists.txt  main.cpp
src/lab5/: CMakeLists.txt  main.cpp
src/lab5/matrix/: CMakeLists.txt
src/lab5/matrix/include/: matrix.h
src/lab5/matrix/src/: matrix.cpp
